Fix cohort alignment

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -804,6 +804,8 @@ body.splash-transition
         margin-top: 5px
 
     .cohorts
+      td
+        vertical-align: bottom
       td:first-child
         padding-right: 50px
       a
